# MetaGuard

./: .gitignore  MetaGuard_PRD_Lean.txt  README.md  patch_claude.py
backend/: .env.example  api_response.json  find_70b.py  mcp_config.json  pyproject.toml  requirements.txt  sync_dead_data.py  test_api.py  test_chat.py  test_google_native.py  test_keys.py  test_scan.py  verify_mcp.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  blast_radius.py  chat.py  dead_data.py  passport.py  rca.py  storm_warning.py
backend/app/clients/: llm.py  openmetadata.py
backend/app/core/: config.py  utils.py
backend/app/mcp/: server.py
backend/app/schemas/: __init__.py  modules.py
backend/app/services/: __init__.py  blast_radius.py  chat.py  dead_data.py  explanation.py  impact.py  mcp_agent.py  passport.py  passport_support.py  storm_warning.py
backend/scratch/: list_slack_tools.py  test_key_rotation.py  test_mcp_slack.py  test_orchestrator_multi_turn.py  test_slack_link.py  verify_keys.py  verify_memory.py
backend/scripts/: seed_metaguard_demo.py
backend/tests/: test_modules.py
docs/: architecture.md  local-setup.md
frontend/: fix_duplicate.py  index.html  package-lock.json  package.json
frontend/scratch/: check_jsx.py  fix_boot.py  sidebar_layout.css
frontend/src/: main.tsx
frontend/src/app/: App.tsx  ProtoApp.tsx  styles.css
frontend/src/components/ui/: Panel.tsx
frontend/src/lib/: api.ts
frontend/src/types/: contracts.ts
shared/contracts/: README.md
shared/examples/: module-status.json
(+8 files in other folders)
