[project]
name = "metaguard-backend"
version = "0.1.0"
description = "FastAPI backend for MetaGuard - OpenMetadata Hackathon"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "openmetadata-ingestion>=1.4.0",
  "anthropic>=0.25.0",
  "groq>=0.5.0",
  "python-dotenv>=1.0.1",
  "slack-sdk>=3.27.1",
  "google-api-python-client>=2.129.0",
  "google-auth-oauthlib>=1.2.0",
  "mcp>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
