[project]
name = "metaguard-backend"
version = "0.1.0"
description = "FastAPI backend for MetaGuard - OpenMetadata Hackathon"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "openmetadata-ingestion>=1.4.0",
  "anthropic",
  "groq",
  "python-dotenv",
  "slack-sdk",
  "google-api-python-client",
  "google-auth-oauthlib",
  "mcp"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
